--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -1,9 +1,7 @@
 <table class="table table-striped">
   <tr>
     <th style="text-align: center;">Status</th>
-    <th>Name</th>
-    <th>Branch</th>
-    <th>DB migrate</th>
+    <th>Name</th>    
     <th style="text-align: center;">Actions</th>
   </tr>
   <%if @environments.present? %>
@@ -11,13 +9,10 @@
       <tr>
         <td style="text-align: center;"><div class="stack-status" data-graph-id="<%=environment.id%>"><%= image_tag(status_image(environment.provision_status)["img_src"], title: "#{status_image(environment.provision_status)["img_title"]}", rel: 'tooltip', id: "stack-status-image-#{environment.id}", size: '20x20') %></div></td>
         <td><%= environment.name %></td>
-        <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
-        <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
         <td style="text-align: center;">
-          <%= link_to 'Update', "javascript:void(0);",:class=>'btn btn-inverse save_env', id: "save_env_#{environment.id}"%>&nbsp;&nbsp;&nbsp;&nbsp;
           <%= link_to 'Edit', edit_project_environment_path(@project,environment),:class=>'btn btn-inverse' %>&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn btn-inverse', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;    
-          <%= link_to 'Deploy', project_environment_deployments_path(@project,environment) ,:class=>'btn btn-inverse', method: :post%></td>
+          <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn btn-inverse', method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   <%else%>
@@ -27,4 +22,3 @@
   <%end%>
 </table>
 <%= render 'new_environment_modal' %>
-
