Fix issue with displaying output attributes

--- a/app/assets/javascripts/environment/widgets/instance.js.erb
+++ b/app/assets/javascripts/environment/widgets/instance.js.erb
@@ -108,7 +108,7 @@
       return attributes;
     },
     setConfigAttributes: function(configAttributes){
-      this.resource.setOutputAttributes(configAttributes);
+      this.resource.saveConfigAttributes(configAttributes);
     },
     getConfigurationDialogId: function(){
       return this.options.resourceType + '-configuration' ;
