Replaced beta text with symbol

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,7 @@
-<a href='<%= root_path%>' class="brand">Visual Cloud <sup>beta</sup></a>
+<a href="<%= root_path%>" class="brand">
+  <span>Visual Cloud<sub>β</sub>
+  </span>
+</a>
 <ul class="nav pull-right">
   <% if user_signed_in? %>
     <li>
