--- a/app/views/environments/provision.js.erb
+++ b/app/views/environments/provision.js.erb
@@ -1,2 +1,5 @@
-showFlashMessages($('#container'), '','<%= escape_javascript flash_messages %>');
-updateInstanceElementIds(JSON.parse('<%= raw @instance_ids.to_json %>'));
+<%if flash.now[:error].blank? %>
+  window.location = '<%= edit_project_environment_path(@environment.project_id,@environment.id)%>';
+<%else%>
+  showFlashMessages($('#container'), '','<%= escape_javascript flash_messages %>');
+<%end%>
