--- a/app/views/environments/create.js.erb
+++ b/app/views/environments/create.js.erb
@@ -1,5 +1,6 @@
 <%if flash.now[:error].blank? %>
   window.location = '<%= edit_project_environment_path(@project,@environment.id)%>';
 <%else%>
+  hideLoading();
   showFlashMessages($('#container'), '','<%= escape_javascript flash_messages %>');
 <%end%>
