added few css classes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -139,3 +139,12 @@ div.graph-draggables-dock {
   display: inline-block;
   width: 115px;
 }
+
+.drop_down_width{
+  width:225px;
+}
+
+.modified-nav{
+  margin-bottom:0px;
+  margin-left: 60px;
+}
