1.added update states for icon 2.removed not used code 3.alignment issues corrected

--- a/app/views/environments/_project_environment.html.erb
+++ b/app/views/environments/_project_environment.html.erb
@@ -26,5 +26,7 @@
         window.location = "/projects/"+<%=@project.id%>+"/environments/"+environment_id+"/edit";
       });
     });
+  <% if !@environment.id.to_s.empty? %>
   $("#environments_list option[value='" + <%= @environment.id %> + "']").attr("selected","selected");
+  <%end%>
 </script>
