added few css classes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -148,3 +148,9 @@ div.graph-draggables-dock {
   margin-bottom:0px;
   margin-left: 60px;
 }
+
+.instance-status{
+  margin-top:-10px;
+  float:right;
+  position:relative;
+}
